Add `vertical-sides-almost-flat-top` variants for `W`/`w`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1874,8 +1874,17 @@ selectorAffix.W = "straightVerticalSides"
 selectorAffix."W/sansSerif" = "straightVerticalSides"
 selectorAffix.WHookRight = "straightVerticalSides"
 
-[prime.capital-w.variants-buildup.stages.body.straight-vertical-sides-flat-top]
+[prime.capital-w.variants-buildup.stages.body.straight-vertical-sides-almost-flat-top]
 rank = 7
+groupRank = 3
+nonBreakingVariantAdditionPriority = 200
+descriptionAffix = "straight body shape with vertical sides, and a middle stem aligned to the top"
+selectorAffix.W = "straightVerticalSidesAlmostFlatTop"
+selectorAffix."W/sansSerif" = "straightVerticalSidesFlatTop"
+selectorAffix.WHookRight = "straightVerticalSidesAlmostFlatTop"
+
+[prime.capital-w.variants-buildup.stages.body.straight-vertical-sides-flat-top]
+rank = 8
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "straight body shape with vertical sides, and a middle stem aligned to the top"
@@ -1884,15 +1893,24 @@ selectorAffix."W/sansSerif" = "straightVerticalSidesFlatTop"
 selectorAffix.WHookRight = "straightVerticalSidesFlatTop"
 
 [prime.capital-w.variants-buildup.stages.body.rounded-vertical-sides]
-rank = 8
+rank = 9
 groupRank = 3
 descriptionAffix = "rounded body shape with vertical sides"
 selectorAffix.W = "roundedVerticalSides"
 selectorAffix."W/sansSerif" = "roundedVerticalSides"
 selectorAffix.WHookRight = "roundedVerticalSides"
 
+[prime.capital-w.variants-buildup.stages.body.rounded-vertical-sides-almost-flat-top]
+rank = 10
+groupRank = 3
+nonBreakingVariantAdditionPriority = 200
+descriptionAffix = "rounded body shape with vertical sides, and a middle stem almost aligned to the top"
+selectorAffix.W = "roundedVerticalSidesAlmostFlatTop"
+selectorAffix."W/sansSerif" = "roundedVerticalSidesFlatTop"
+selectorAffix.WHookRight = "roundedVerticalSidesAlmostFlatTop"
+
 [prime.capital-w.variants-buildup.stages.body.rounded-vertical-sides-flat-top]
-rank = 9
+rank = 11
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "rounded body shape with vertical sides, and a middle stem aligned to the top"
@@ -1901,7 +1919,7 @@ selectorAffix."W/sansSerif" = "roundedVerticalSidesFlatTop"
 selectorAffix.WHookRight = "roundedVerticalSidesFlatTop"
 
 [prime.capital-w.variants-buildup.stages.body.curly]
-rank = 10
+rank = 12
 groupRank = 3
 descriptionAffix = "curly body"
 selectorAffix.W = "curly"
@@ -1909,7 +1927,7 @@ selectorAffix."W/sansSerif" = "curly"
 selectorAffix.WHookRight = "curly"
 
 [prime.capital-w.variants-buildup.stages.body.curly-almost-flat-top]
-rank = 11
+rank = 13
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "curly body with a middle stem almost aligned to the top"
@@ -1918,7 +1936,7 @@ selectorAffix."W/sansSerif" = "curlyFlatTop"
 selectorAffix.WHookRight = "curlyAlmostFlatTop"
 
 [prime.capital-w.variants-buildup.stages.body.curly-flat-top]
-rank = 12
+rank = 14
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "curly body with a middle stem aligned to the top"
@@ -4887,8 +4905,17 @@ selectorAffix.w = "straightVerticalSides"
 selectorAffix."w/sansSerif" = "straightVerticalSides"
 selectorAffix.wHookRight = "straightVerticalSides"
 
-[prime.w.variants-buildup.stages.body.straight-vertical-sides-flat-top]
+[prime.w.variants-buildup.stages.body.straight-vertical-sides-almost-flat-top]
 rank = 7
+groupRank = 3
+nonBreakingVariantAdditionPriority = 200
+descriptionAffix = "straight body shape with vertical sides, and a middle stem almost aligned to the top"
+selectorAffix.w = "straightVerticalSidesAlmostFlatTop"
+selectorAffix."w/sansSerif" = "straightVerticalSidesFlatTop"
+selectorAffix.wHookRight = "straightVerticalSidesAlmostFlatTop"
+
+[prime.w.variants-buildup.stages.body.straight-vertical-sides-flat-top]
+rank = 8
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "straight body shape with vertical sides, and a middle stem aligned to the top"
@@ -4897,15 +4924,24 @@ selectorAffix."w/sansSerif" = "straightVerticalSidesFlatTop"
 selectorAffix.wHookRight = "straightVerticalSidesFlatTop"
 
 [prime.w.variants-buildup.stages.body.rounded-vertical-sides]
-rank = 8
+rank = 9
 groupRank = 3
 descriptionAffix = "rounded body shape with vertical sides"
 selectorAffix.w = "roundedVerticalSides"
 selectorAffix."w/sansSerif" = "roundedVerticalSides"
 selectorAffix.wHookRight = "roundedVerticalSides"
 
+[prime.w.variants-buildup.stages.body.rounded-vertical-sides-almost-flat-top]
+rank = 10
+groupRank = 3
+nonBreakingVariantAdditionPriority = 200
+descriptionAffix = "rounded body shape with vertical sides, and a middle stem almost aligned to the top"
+selectorAffix.w = "roundedVerticalSidesAlmostFlatTop"
+selectorAffix."w/sansSerif" = "roundedVerticalSidesFlatTop"
+selectorAffix.wHookRight = "roundedVerticalSidesAlmostFlatTop"
+
 [prime.w.variants-buildup.stages.body.rounded-vertical-sides-flat-top]
-rank = 9
+rank = 11
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "rounded body shape with vertical sides, and a middle stem aligned to the top"
@@ -4914,7 +4950,7 @@ selectorAffix."w/sansSerif" = "roundedVerticalSidesFlatTop"
 selectorAffix.wHookRight = "roundedVerticalSidesFlatTop"
 
 [prime.w.variants-buildup.stages.body.curly]
-rank = 10
+rank = 12
 groupRank = 3
 descriptionAffix = "curly body"
 selectorAffix.w = "curly"
@@ -4922,7 +4958,7 @@ selectorAffix."w/sansSerif" = "curly"
 selectorAffix.wHookRight = "curly"
 
 [prime.w.variants-buildup.stages.body.curly-almost-flat-top]
-rank = 11
+rank = 13
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "curly body with a middle stem almost aligned to the top"
@@ -4931,7 +4967,7 @@ selectorAffix."w/sansSerif" = "curlyFlatTop"
 selectorAffix.wHookRight = "curlyAlmostFlatTop"
 
 [prime.w.variants-buildup.stages.body.curly-flat-top]
-rank = 12
+rank = 14
 groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "curly body with a middle stem aligned to the top"
@@ -4940,7 +4976,7 @@ selectorAffix."w/sansSerif" = "curlyFlatTop"
 selectorAffix.wHookRight = "curlyFlatTop"
 
 [prime.w.variants-buildup.stages.body.cursive]
-rank = 13
+rank = 15
 groupRank = 4
 descriptionAffix = "cursive shape"
 selectorAffix.w = "cursive"
